Fix for funny right floater alignments in categories

--- a/Huddle/Huddle/App_Themes/Normal/Normal.css
+++ b/Huddle/Huddle/App_Themes/Normal/Normal.css
@@ -185,6 +185,7 @@ footer {
         font-weight: 100;
         float: right;
         margin-top: 2px;
+        min-width: 200px;
     }
 
 /*******************************************
